# RMQ-experiments

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run_benchmark.sh  run_experiments.sh  run_indexing_experiments.sh
benchmark/: CMakeLists.txt  benchmark.cpp  benchmark.hpp  distribution.cpp  generator.cpp  generator.hpp  statistics.hpp  type_list.hpp  utils.hpp
competitors/: block_decomposition.hpp  block_decomposition_wrapper.hpp  compr_eps_rmq_wrapper.hpp  eps_rmq_wrapper.hpp  ferrada_rmq_wrapper.hpp  fl_rmq_succ_wrapper.hpp  fl_rmq_wrapper.hpp  hybrid_rmq_wrapper.hpp  linear_scan.hpp  sdsl_rmq_wrapper.hpp  segment_tree_wrapper.hpp  sparse_table.hpp  sparse_table_wrapper.hpp  succinct_rmq_wrapper.hpp
